# one-pager-project

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: classroom.yml
project/: README.md
tests/: test_css.py  test_html.py
