[tool.poetry]
name = "one-pager"
version = "0.1.0"
description = ""
authors = ["Winikka <winikkc@hsd.k12.or.us>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.3.3"
webcode-tk = "^1.0.0"
file-clerk = "^1.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
